# Mandelbrot-in-Rust-and-C

./: .gitignore  README.md  mandelbrot_c  mandelbrot_r
benchmark/: Makefile  linpack.c
benchmark/i5-7200U/: 7z_result.txt  linpack_result.txt
benchmark/i7-4770K/: 7z_result.txt  linpack_result.txt
benchmark/rust/: Cargo.toml
c/: Makefile  main.c  mandel.c  run_tests.sh
c/examples/: main  main.c  openmptest  simplethread  simplethread.c
c/measures/: c_openmp_performance.txt
c/modules/: forkjoin.c  forkjoin.h  mandel.c  mandel.h  threadpool.c  threadpool.h  threads.c  wopenmp.c  wopenmp.h  wthreadpool.c  wthreadpool.h  wthreads.c  wthreads.h
c/tests/: Makefile  mandel_integration_tests.c
examples/c/: openmptest.c
measure results/: c_threadpool_performance.txt  c_threads_performance.txt  rust_rayon_performance.txt  rust_threads_unsafe_performance.txt
python/: plotter.py
rust/: Cargo.toml
rust/chunking/: Cargo.toml
rust/mandelbrot/: Cargo.toml
rust/mandelbrot/src/: lib.rs  main.rs
rust/mandelbrot/src/customerror/: mod.rs
rust/mandelbrot/src/mandel/: mod.rs
rust/mandelbrot/src/measure/: mod.rs
rust/mandelbrot/src/parseargs/: mod.rs
rust/mandelbrot/src/time/: mod.rs
rust/mandelbrot/src/wcrossbeam/: mod.rs
rust/mandelbrot/src/wforkjoin/: mod.rs
rust/mandelbrot/src/wforkjoinunsafe/: mod.rs
rust/mandelbrot/src/wrayon/: mod.rs
rust/mandelbrot/src/wscopedthreadpool/: mod.rs
rust/mandelbrot/src/wthreads/: mod.rs
rust/mandelbrot/src/wthreadsunsafe/: mod.rs
rust/mandelbrot/tests/: mandel_tests.rs
rust/src/: lib.rs  main.rs
(+56 files in other folders)
